--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <img src="images/logo.png">
+        <header>
+            <img class="logo" src="images/logo.png" alt="site-logo">
+            <img class="avatar" src="images/user-avatar.png" alt="user-avatar">
+        </header>
+        <div id="user-posts"></div>
         <script src="index.js"></script>
     </body>
 </html>
